# vic_health

./: README.md  export_config.toml  hello.py  pyproject.toml
.github/workflows/: deploy.yml
.kiro/hooks/: update-readme-on-task-complete.kiro.hook  uv-sync-on-py-edit.kiro.hook
.kiro/specs/geojson-export-workflow/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/liveability-map/: design.md  requirements.md  tasks.md
.kiro/specs/scenario-comparison-map/: .config.kiro  design.md  requirements.md  tasks.md
liveability-map/: index.html  package-lock.json  package.json  vite.config.ts
liveability-map/public/data/: liveability.geojson  niddrie.csv  vichealth_niddrie.gpkg
liveability-map/src/: colourScale.ts  comparisonMap.ts  dataLoader.ts  detailPanel.ts  indicatorLabels.ts  legend.ts  main.ts  mapRenderer.ts  scenarioDataLoader.ts  scorePanel.ts  selectors.ts  setup.test.ts  style.css
vic_health/: __init__.py  explorer.py  export_addresses.py  export_cli.py  exporter.py  extractor.py  gpkg_to_geojson.py  models.py  test_explorer.py
