[project]
name = "vic-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary",
    "hypothesis",
    "pytest",
    "geopandas",
    "sqlalchemy>=2.0.49",
    "pyproj",
]

[project.scripts]
vic-health-export = "vic_health.export_cli:main"
vic-health-gpkg2geojson = "vic_health.gpkg_to_geojson:main"

[tool.setuptools]
packages = ["vic_health"]

[tool.uv]
package = true
